Fix text whitespace in table

--- a/ui/src/css/doc.css
+++ b/ui/src/css/doc.css
@@ -266,6 +266,7 @@
 .doc table.tableblock,
 .doc table.tableblock > * > tr > * {
   border: 0 solid var(--table-border-color);
+  white-space: normal;
 }
 
 .doc table.grid-all > * > tr > * {
